--- a/public/index.html
+++ b/public/index.html
@@ -31,32 +31,32 @@
     <meta name="theme-color" content="#059669" />
     <meta
       name="description"
-      content="Own Exclusive Real Estate In The Metaverse"
+      content="Making it easy to build inside the metaverse."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="./manifest.webmanifest" />
-    <title>Meta DAO NFT | Exclusive Metaverse Real Estate</title>
+    <title>Meta DAO NFT | Making it easy to build inside the metaverse</title>
 
     <!-- Twitter Card data -->
     <meta
       name="twitter:card"
-      value="Own Exclusive Real Estate In The Metaverse"
+      value="Making it easy to build inside the metaverse."
     />
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Meta DAO NFT" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://www.metadaonft.xyz/" />
+    <meta property="og:url" content="http://www.metadaonft.club/" />
     <meta
       property="og:image"
-      content="http://www.metadaonft.xyz/android-chrome-512x512.png"
+      content="http://www.metadaonft.club/android-chrome-512x512.png"
     />
     <meta
       property="og:description"
-      content="Get Access To The Most Exclusive Real Estate In The Metaverse"
+      content="Making it easy to build inside the metaverse."
     />
   </head>
   <body>
