--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,9 @@
       property="og:image"
       content="http://www.metadaonft.club/android-chrome-512x512.png"
     />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
     <meta
       property="og:description"
       content="Making it easy to build inside the metaverse."
